Sat  Sep 24 2005	H. Wade Minter (minter@lunenburg.org)
     * Display the filename in the "Edit Song" menu.  Suggested by Bill
       in Portland.

Thu  Sep 22 2005	H. Wade Minter (minter@lunenburg.org)
     * Add a File menu option to export the song list to a file.
       Suggested by Ted in Chapel Hill.

Mon  Sep 12 2005	H. Wade Minter (minter@lunenburg.org)
     * Fixed a bug where the file browser would not pop up on Windows when
       going to add a bundle.  Reported by Lanny in Dallas.

Thu  Sep  1 2005	H. Wade Minter (minter@lunenburg.org)
     * Fixed another bug where empty artists/info was showing up as the
       string "NULL".
     * Fixed a dbh->quote bug on editing songs.
     * Tagged 2.1.2

Wed  Aug 31 2005	H. Wade Minter (minter@lunenburg.org)
     * Tagged 2.1.1 (bugfix release)
     * Fixed a sprintf bug in song adds (needed to escape a %).  Reported 
       by Lanny in Dallas.

Tue  Aug 30 2005	H. Wade Minter (minter@lunenburg.org)
     * Fix a bug where adding a new song file with no ID3 information would
       blank out title and artist that you put in.  Now the manual title and
       artist are only overwritten when there is valid ID3 data in the file.
       Reported by Kareem in Austin.

Fri  Aug 26 2005	H. Wade Minter (minter@lunenburg.org)
     * Only do the online version check if online functionality is enabled.

Sun  Aug 14 2005	H. Wade Minter (minter@lunenburg.org)
     * Fix a bug where having Mr. Voice Online version check enabled without
       a working internet connection would prevent the application from 
       starting.  Reported by Tim in Richmond.

Sun  Aug  7 2005	H. Wade Minter (minter@lunenburg.org)
     * Fix a bug where searching for a string with an apostrophe in it would
       cause an error.
     * Refactor database calls to either use placeholders or $dbh->quote()

Mon  Aug  1 2005	H. Wade Minter (minter@lunenburg.org)
     * Fix bugs where a Bundle wouldn't have all the required information.